# ShaderMaker

./: .gitignore  CMakeLists.txt
assets/: albedo.frag  albedo.vert  litTemplate.frag  postProcess.vert  postTemplate.frag  template.frag  test.frag  test.vert
assets/textures/icons/: icon_int.psd  icons.psd
src/: camera.h  main.cpp  mesh.cpp  model.cpp  model.h  shader.cpp  shader.h  texture.cpp  texture.h  transform.cpp
src/sm/: framebuffer.cpp  framebuffer.h  mesh.cpp  mesh.h  shader.cpp  shaderGenerator.cpp  shaderGenerator.h  shadermaker.cpp  shadermaker.h  texture.cpp  texture.h  transform.h
src/sm/maker/: link.h  node.h  nodespec.h  pin.h  pinspec.h  savegraph.cpp  savegraph.h  window.cpp  window.h
